Whoops forgot a file

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -73,7 +73,7 @@ if (WIN32)
     "${BSCRIPT_LIB}"
     "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/plib.lib"
     "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/clib.lib"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/format.lib"
+    "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/install/lib/fmt.lib"
     "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/tinyxml.lib"
     "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/escriptgrammarlib.lib"
     "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/stackwalk.lib"
@@ -92,7 +92,7 @@ else()
     "${BSCRIPT_LIB}"
     "${BSCRIPT_SOURCE_DIR}/bin/libplib.a"
     "${BSCRIPT_SOURCE_DIR}/bin/libclib.a"
-    "${BSCRIPT_SOURCE_DIR}/bin/libformat.a"
+    "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/install/lib/libfmt.a"
     "${BSCRIPT_SOURCE_DIR}/bin/libtinyxml.a"
     "${BSCRIPT_SOURCE_DIR}/bin/libescriptgrammarlib.a"
     "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/lib/libantlr4-runtime.a"
@@ -145,6 +145,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
   "${BSCRIPT_SOURCE_DIR}/pol-core"
   "${BSCRIPT_SOURCE_DIR}/pol-core/bscript"
   "${BSCRIPT_SOURCE_DIR}/lib"
+  "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/include"
   "${BSCRIPT_SOURCE_DIR}/bin-build"
   "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/include/antlr4-runtime"
 )
