Update package.json and README.md for extension touches

--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
 			"url": "https://github.com/polserver"
 		}
 	],
-	"license": "MIT",
+	"license": "Apache-2.0",
 	"publisher": "polserver",
-	"categories": [],
-	"keywords": [],
+	"icon": "icon.png",
+	"categories": [
+		"Programming Languages"
+	],
+	"keywords": [
+		"POL",
+		"polserver",
+		"Escript"
+	],
 	"engines": {
 		"vscode": "^1.78.0"
 	},
