--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
 							"host": {
 								"type": "string",
 								"description": "Debug server host",
-								"default": "localhost"
+								"default": "127.0.0.1"
 							},
 							"port": {
 								"type": "number",
@@ -161,14 +161,13 @@
 					},
 					"attach": {
 						"required": [
-							"host",
 							"port"
 						],
 						"properties": {
 							"host": {
 								"type": "string",
 								"description": "Debug server host",
-								"default": "localhost"
+								"default": "127.0.0.1"
 							},
 							"port": {
 								"type": "number",
