--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -1,23 +1,10 @@
 cmake_minimum_required(VERSION 3.9)
 cmake_policy(SET CMP0042 NEW)
-set (CMAKE_CXX_STANDARD 11)
-
-if(APPLE AND NOT DEFINED ENV{BUILD_OSX_SLIM_BINARY})
-  message("** Building universal macOS binary")
-  set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
-  set(BUILD_OSX_UNIVERSAL_BINARY TRUE)
-  set(PIPED_OSX_ARCHITECTURES "arm64|x86_64") # For ExternalProject
-endif()
-
-include(ExternalProject)
-
-project (vscode-escript-native)
-include_directories(${CMAKE_JS_INC})
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-file(GLOB_RECURSE SOURCE_FILES "cpp/*.cc" "cpp/*.h")
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
-set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
+set (CMAKE_CXX_STANDARD 17)
+
+project (vscode-escript-native)
 
 if(APPLE)
   set(PLATFORM darwin)
@@ -27,6 +14,13 @@ else()
   set(PLATFORM linux)
 endif()
 
+if(APPLE AND NOT DEFINED ENV{BUILD_OSX_SLIM_BINARY})
+  message("** Building universal macOS binary")
+  set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
+  set(BUILD_OSX_UNIVERSAL_BINARY TRUE)
+  set(PIPED_OSX_ARCHITECTURES "arm64|x86_64") # For ExternalProject
+endif()
+
 if(BUILD_OSX_UNIVERSAL_BINARY)
   set(ARCH universal)
 elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
@@ -34,10 +28,6 @@ elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
 else()
   set(ARCH x64)
 endif()
-
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "vscode-escript-native.${PLATFORM}-${ARCH}")
-
-target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
 
 if(MSVC AND CMAKE_JS_NODELIB_DEF AND CMAKE_JS_NODELIB_TARGET)
   # Generate node.lib
@@ -51,117 +41,40 @@ execute_process(
 )
 string(REGEX REPLACE "[\r\n\"]" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
-target_compile_definitions(${PROJECT_NAME} PUBLIC ANTLR4CPP_STATIC)
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
-set(BSCRIPT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/polserver")
-set(BSCRIPT_BUILD_DIR "${BSCRIPT_SOURCE_DIR}/bin-build")
-set(BSCRIPT_BIN_DIR "${BSCRIPT_SOURCE_DIR}/bin")
-
-if (WIN32)
-
-  if ("${CMAKE_GENERATOR}" MATCHES "Ninja" AND "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    set(ANTLR_LIB "antlr4-runtime.lib")
-  else()
-    set(ANTLR_LIB "antlr4-runtime-static.lib")
-  endif()
-
-  set(BSCRIPT_LIB "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/bscript.lib")
-
-  set(BSCRIPT_LIBS
-    "${BSCRIPT_LIB}"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/plib.lib"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/clib.lib"
-    "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/install/lib/fmt.lib"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/tinyxml.lib"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/escriptgrammarlib.lib"
-    "${BSCRIPT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/stackwalk.lib"
-    "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/lib/${ANTLR_LIB}"
-  )
-
-  target_link_libraries(${PROJECT_NAME}
-    "ws2_32"
-  )
-
-else()
-
-  set(BSCRIPT_LIB "${BSCRIPT_SOURCE_DIR}/bin/libbscript.a")
-
-  set(BSCRIPT_LIBS
-    "${BSCRIPT_LIB}"
-    "${BSCRIPT_SOURCE_DIR}/bin/libplib.a"
-    "${BSCRIPT_SOURCE_DIR}/bin/libclib.a"
-    "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/install/lib/libfmt.a"
-    "${BSCRIPT_SOURCE_DIR}/bin/libtinyxml.a"
-    "${BSCRIPT_SOURCE_DIR}/bin/libescriptgrammarlib.a"
-    "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/lib/libantlr4-runtime.a"
-  )
-endif()
-
-if (UNIX)
-  add_compile_options(-fPIC)
-endif()
-if (MSVC)
-  set(CMAKE_CXX_FLAGS_RELEASE "/MT")
-  set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
-endif()
-
-set(SHOULD_BUILD_BSCRIPT FALSE)
-foreach(POLSERVER_LIB ${BSCRIPT_LIBS})
-  if (NOT EXISTS "${POLSERVER_LIB}")
-    message("- will build bscript: ${POLSERVER_LIB} is missing")
-    set(SHOULD_BUILD_BSCRIPT TRUE)
-    break()
-  endif()
-endforeach()
-
-if (SHOULD_BUILD_BSCRIPT)
-  ExternalProject_Add(libbscript
-    SOURCE_DIR  ${BSCRIPT_SOURCE_DIR}
-    PREFIX blinb
-    LIST_SEPARATOR |
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DONLY_ECOMPILE=On -DCMAKE_OSX_ARCHITECTURES=${PIPED_OSX_ARCHITECTURES}
-
-    BINARY_DIR ${BSCRIPT_BUILD_DIR}
-
-    BUILD_COMMAND ${CMAKE_COMMAND} --build . --config ${CMAKE_BUILD_TYPE}
-    INSTALL_COMMAND ""
-
-    BUILD_BYPRODUCTS ${BSCRIPT_LIBS}
-    LOG_DOWNLOAD 1
-    LOG_CONFIGURE 1
-    LOG_BUILD 1
-    LOG_INSTALL 1
-    LOG_OUTPUT_ON_FAILURE 1
-    LOG_MERGED_STDOUTERR 1
-  )
-  add_dependencies(${PROJECT_NAME} libbscript)
-else()
-  message("- will not build libbscript")
-endif()
+file(GLOB_RECURSE SOURCE_FILES "cpp/*.cc" "cpp/*.h")
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
+set_target_properties(${PROJECT_NAME} PROPERTIES
+  PREFIX "" SUFFIX ".node"
+  OUTPUT_NAME "vscode-escript-native.${PLATFORM}-${ARCH}"
+)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-  "${BSCRIPT_SOURCE_DIR}/pol-core"
-  "${BSCRIPT_SOURCE_DIR}/pol-core/bscript"
-  "${BSCRIPT_SOURCE_DIR}/lib"
-  "${BSCRIPT_SOURCE_DIR}/lib/fmt-10.2.0/include"
-  "${BSCRIPT_SOURCE_DIR}/bin-build"
-  "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/include/antlr4-runtime"
+  ${NODE_ADDON_API_DIR}
+  ${CMAKE_JS_INC}
 )
-
-target_link_libraries(${PROJECT_NAME} ${BSCRIPT_LIBS})
+target_link_libraries(${PROJECT_NAME} PUBLIC
+  ${CMAKE_JS_LIB}
+)
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+  NAPI_VERSION=5
+)
 
 if(MSVC)
-    add_compile_options(
-        $<$<CONFIG:>:/MT> #---------|
-        $<$<CONFIG:Debug>:/MTd> #---|-- Statically link the runtime libraries
-        $<$<CONFIG:Release>:/MT> #--|
-    )
+  target_compile_options(${PROJECT_NAME} PRIVATE
+    $<$<CONFIG:>:/MT> #---------|
+    $<$<CONFIG:Debug>:/MTd> #---|-- Statically link the runtime libraries
+    $<$<CONFIG:Release>:/MT> #--|
+  )
 endif()
 
-target_compile_definitions(${PROJECT_NAME} PUBLIC
-  TIXML_USE_STL
-)
+# since external prjs are always build, disable pol related ones
+# eg Curl
+set(BUILD_ALL OFF CACHE BOOL "do not add every ext prj" FORCE)
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/polserver")
 
-add_definitions(-DNAPI_VERSION=5)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+  bscript
+  plib
+  libtinyxml
+)
