--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"async": "^3.2.5",
+		"prettier": "^3.2.5",
 		"vscode-escript-native": "file:../native",
 		"vscode-languageserver": "^8.1.0",
 		"vscode-languageserver-textdocument": "^1.0.8",
