--- a/package.json
+++ b/package.json
@@ -80,6 +80,11 @@
 					"type": "string",
 					"default": "",
 					"description": "If set, use this specific POL commit (or tag) for documentation."
+				},
+				"escript.disableWorkspaceReferences": {
+					"type": "boolean",
+					"default": false,
+					"markdownDescription": "Disable support for finding references across the whole workspace. If `true`, loading of the workspace cache is skipped, and finding references will only work across open files in the editor and their dependents.\n\nChanging this option does nothing if the workspace cache has already been loaded."
 				}
 			}
 		},
