--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,6 +17,7 @@ client/node_modules/**
 !client/node_modules/{minimatch,brace-expansion,concat-map,balanced-match}/**
 !client/node_modules/{semver,lru-cache,yallist}/**
 server/test/**
+native/test/**
 client/jest.e2e.config.js
 server/jest.config.js
 native/.clang-format
