--- a/native/package.json
+++ b/native/package.json
@@ -19,7 +19,7 @@
 		"url": "https://github.com/polserver/vscode-escript"
 	},
 	"devDependencies": {
-		"@types/node": "^22.13.0",
+		"@types/node": "*",
 		"cmake-js": "^7.3.0",
 		"node-addon-api": "^8.3.0",
 		"typescript": "^5.7.3"
