--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,6 @@
 	},
 	"scripts": {},
 	"devDependencies": {
-		"@types/async": "^3.2.24",
-		"@types/node": "^22.9.0"
+		"@types/async": "^3.2.24"
 	}
 }
