--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "escript-lsp",
+	"displayName": "Escript Language Server",
 	"version": "0.15.0",
 	"description": "EScript for Visual Studio Code. Provides code completion, navigation, and more.",
 	"contributors": [
