--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "escript-lsp",
 	"displayName": "Escript Language Server",
-	"version": "0.18.2",
+	"version": "0.19.0",
 	"description": "EScript for Visual Studio Code. Provides code completion, navigation, and more.",
 	"contributors": [
 		{
@@ -236,7 +236,6 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run clean && npm run build",
-		"postinstall": "cd client && npm install && cd ../native && npm install && cd ../server && npm install",
 		"watch": "npm run grammar && tsc -b -w",
 		"build": "npm run grammar && tsc -b && cd native && npm run build",
 		"clean": "rimraf client/out server/out grammars/escript.json",
@@ -246,6 +245,11 @@
 		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json && js-yaml grammars/cfg.yml > grammars/cfg.json && js-yaml grammars/codeblock.yml > grammars/codeblock.json && js-yaml grammars/doc.yml > grammars/doc.json",
 		"eslint": "eslint"
 	},
+	"workspaces": [
+		"native",
+		"client",
+		"server"
+	],
 	"dependencies": {
 		"vscode-languageclient": "^9.0.1"
 	},
