--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -10,6 +10,8 @@ if(APPLE)
   set(PLATFORM darwin)
 elseif(WIN32)
   set(PLATFORM win32)
+elseif(ANDROID)
+  set(PLATFORM android)
 else()
   set(PLATFORM linux)
 endif()
@@ -23,7 +25,7 @@ endif()
 
 if(BUILD_OSX_UNIVERSAL_BINARY)
   set(ARCH universal)
-elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*|aarch64)")
   set(ARCH arm64)
 else()
   set(ARCH x64)
